# KPI-Architecture2

./: README.md  main.cpp
lab2/: CMakeLists.txt  Makefile
lab4/: Makefile  hello.c
lab5/: Makefile  hello1.c  hello2.c
lab5/inc/: hello1.h
lab6/: Makefile  MakefileOld  hello1.c  hello2.c
lab6/inc/: hello1.h
